--- a/payrollsystemsti/AdminTabs/Report2.rdlc
+++ b/payrollsystemsti/AdminTabs/Report2.rdlc
@@ -88,7 +88,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value />
+                              <Value>Employee Name</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -786,7 +786,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value />
+                              <Value>=Fields!LastName.Value+ +Fields!FirstName.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -868,6 +868,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -1408,7 +1409,6 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
