--- a/payrollsystemsti/AdminTabs/Report2.rdlc
+++ b/payrollsystemsti/AdminTabs/Report2.rdlc
@@ -9,7 +9,49 @@
               <Width>0.99259in</Width>
             </TablixColumn>
             <TablixColumn>
+              <Width>1.11759in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.90926in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.77384in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.89884in</Width>
+            </TablixColumn>
+            <TablixColumn>
               <Width>0.99259in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>1.44051in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.99259in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.99259in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>1.08634in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.99259in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.99259in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>1.15926in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.72176in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.99259in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>0.88842in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>0.99259in</Width>
@@ -21,52 +63,10 @@
               <Width>0.99259in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>0.86759in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.13842in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>0.99259in</Width>
@@ -74,7 +74,7 @@
           </TablixColumns>
           <TablixRows>
             <TablixRow>
-              <Height>1.64232in</Height>
+              <Height>0.79857in</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -92,7 +92,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox7</rd:DefaultName>
@@ -120,12 +122,14 @@
                             <TextRun>
                               <Value>Basic</Value>
                               <Style>
-                                <FontSize>20pt</FontSize>
+                                <FontSize>13pt</FontSize>
                                 <FontWeight>SemiBold</FontWeight>
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox9</rd:DefaultName>
@@ -153,12 +157,14 @@
                             <TextRun>
                               <Value>Absents</Value>
                               <Style>
-                                <FontSize>15pt</FontSize>
+                                <FontSize>13pt</FontSize>
                                 <FontWeight>SemiBold</FontWeight>
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox11</rd:DefaultName>
@@ -186,12 +192,14 @@
                             <TextRun>
                               <Value>Late</Value>
                               <Style>
-                                <FontSize>20pt</FontSize>
+                                <FontSize>13pt</FontSize>
                                 <FontWeight>SemiBold</FontWeight>
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox13</rd:DefaultName>
@@ -224,7 +232,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox15</rd:DefaultName>
@@ -257,7 +267,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox27</rd:DefaultName>
@@ -290,7 +302,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox25</rd:DefaultName>
@@ -323,7 +337,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox23</rd:DefaultName>
@@ -356,7 +372,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox17</rd:DefaultName>
@@ -389,7 +407,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox19</rd:DefaultName>
@@ -422,7 +442,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox21</rd:DefaultName>
@@ -455,7 +477,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox51</rd:DefaultName>
@@ -488,7 +512,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox49</rd:DefaultName>
@@ -516,12 +542,14 @@
                             <TextRun>
                               <Value>SSS</Value>
                               <Style>
-                                <FontSize>20pt</FontSize>
+                                <FontSize>13pt</FontSize>
                                 <FontWeight>SemiBold</FontWeight>
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox47</rd:DefaultName>
@@ -554,7 +582,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox45</rd:DefaultName>
@@ -587,7 +617,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox43</rd:DefaultName>
@@ -620,7 +652,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox41</rd:DefaultName>
@@ -653,7 +687,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox39</rd:DefaultName>
@@ -686,7 +722,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox37</rd:DefaultName>
@@ -719,7 +757,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox35</rd:DefaultName>
@@ -752,7 +792,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox33</rd:DefaultName>
@@ -785,7 +827,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox31</rd:DefaultName>
@@ -1508,8 +1552,8 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>EmployeeReports</DataSetName>
-        <Height>3.28464in</Height>
-        <Width>21.83708in</Width>
+        <Height>2.44089in</Height>
+        <Width>21.92031in</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -1521,7 +1565,7 @@
     <Height>5in</Height>
     <Style />
   </Body>
-  <Width>21.98859in</Width>
+  <Width>22.5974in</Width>
   <Page>
     <LeftMargin>1in</LeftMargin>
     <RightMargin>1in</RightMargin>
