--- a/payrollsystemsti/AdminTabs/Report2.rdlc
+++ b/payrollsystemsti/AdminTabs/Report2.rdlc
@@ -6,75 +6,75 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.11759in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.90926in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.77384in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.89884in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.44051in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.08634in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.15926in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.72176in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.88842in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.86759in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.13842in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99259in</Width>
+              <Width>1.14893in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
             <TablixRow>
-              <Height>0.57368in</Height>
+              <Height>0.65375in</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -849,7 +849,7 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>1.41743in</Height>
+              <Height>0.65375in</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -1552,8 +1552,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>EmployeeReports</DataSetName>
-        <Height>1.9911in</Height>
-        <Width>21.92032in</Width>
+        <Top>0.06818in</Top>
+        <Left>0.19886in</Left>
+        <Height>1.3075in</Height>
+        <Width>25.27643in</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -1565,7 +1567,7 @@
     <Height>5in</Height>
     <Style />
   </Body>
-  <Width>22.5974in</Width>
+  <Width>25.47529in</Width>
   <Page>
     <LeftMargin>1in</LeftMargin>
     <RightMargin>1in</RightMargin>
